--- a/не код/ПЛАН_ОБУЧЕНИЯ.md
+++ b/не код/ПЛАН_ОБУЧЕНИЯ.md
@@ -1403,3 +1403,13 @@ fetch('/api/news')        // Запрос на сервер
 ---
 
 **Основная идея:** Учишь человека ДУМАТЬ как разработчик, а не слепо копировать код. 🧠
+
+
+---
+
+### 📋 ЧТО ПОЛЬЗОВАТЕЛЬ УЖЕ ЗНАЕТ И ПОНИМАЕТ (обновляй по ходу обучения)
+
+**День 3 — JavaScript (18.02.2026):**
+- ✅ Понимает AJAX: JS обновляет страницу частями без полной перезагрузки, отправляет запрос и берёт только нужное
+- ✅ Понимает `await`: код ждёт ответа от действия, без него пойдёт дальше не дожидаясь результата
+- 🔶 DOMContentLoaded понял как "хендлер загрузки" — суть уловил, но нужно уточнить: это именно СОБЫТИЕ (event), а хендлер — это функция которую мы вешаем на это событие
